# apps/api/openapi.json
@@ -697,6 +697,41 @@
         ]
       }
     },
+    "/v1/ordered-tests/{id}/results/{analyteId}/verify": {
+      "post": {
+        "operationId": "ObservationController_verify",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "format": "uuid",
+              "pattern": "^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$",
+              "type": "string"
+            }
+          },
+          {
+            "name": "analyteId",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "format": "uuid",
+              "pattern": "^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$",
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "Observation"
+        ]
+      }
+    },
     "/v1/ordered-tests/{id}/results": {
       "get": {
         "operationId": "ObservationController_list",
@@ -1423,7 +1458,8 @@
             "type": "string",
             "enum": [
               "registered",
-              "preliminary"
+              "preliminary",
+              "verified"
             ]
           },
           "source": {
